forms and uploads

--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
-</head>
-<body>
+{{ template "header"}}
+
+<main class="container">
     <h1>Nosotros</h1>
-</body>
-</html>
+</main>
+{{ template "footer"}}
