--- a/views/params.html
+++ b/views/params.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Params</title>
-</head>
-<body>
-    <h1>Params</h1>
-    <ul>
-        <li>ID: {{.id}}</li>
-        <li>Slug: {{.slug}}</li>
-    </ul>
-</body>
-</html>
+{{ template "header"}}
+<main class="container">
+<h1>Params</h1>
+<ul>
+    <li>ID: {{.id}}</li>
+    <li>Slug: {{.slug}}</li>
+</ul>
+</main>
+{{ template "footer"}}
