--- a/views/estructuras.html
+++ b/views/estructuras.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estructuras</title>
-</head>
-<body>
+{{ template "header"}}
+<main class="container">
     <h1>Estructuras</h1>
     <h3>Declaración de variables</h3>
     {{with $valor:= "Hola Mundo"}}
@@ -38,5 +32,5 @@
         <li>{{.Nombre}}</li>
         {{end}}
     </ul>
-</body>
-</html>
+</main>
+{{ template "footer"}}
