--- a/views/home.html
+++ b/views/home.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Inicio</h1>
-</body>
-</html>
+{{ template "header"}}
+
+
+<main class="container">
+        
+    <h1>Welcome Go</h1>
+    <img width="100%" src="/public/images/RPA3.jpg" alt="">
+
+</main>
+
+{{ template "footer"}}
